feat: Refactor cinema search to page-based pagination and add managerName to responses; implement gRPC client for user details